--- a/firmware/.cargo/config.toml
+++ b/firmware/.cargo/config.toml
@@ -4,7 +4,7 @@
 [target.thumbv6m-none-eabi]
 runner = "probe-rs run --chip RP2040"
 
-[target.'thumbv8m.main-none-eabihf']
+[target.thumbv8m.main-none-eabihf]
 runner = "probe-rs run --chip RP235x"
 
 [build]
