--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "pico-bitstream"
+name = "picostream"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-pico-bitstream-shared = { path = "../shared" }
+picostream-shared = { path = "../shared" }
 
 nusb = "0.2"
 clap = { version = "4", features = ["derive"] }
